# numbers

./: CMakeLists.txt  _build.sh  _test.sh
headers/: Solution.h  Types.h
sources/: Solution.cpp  main.cpp
tests/: Test_Numbers.cpp
